--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 		<p> Hello world! </p>
 		<p>My name is Olivia Komberec</p>
 
+		<nav>
+			<ul>
+		            <li><a href="breakfasts.html">Breakfasts</a></li>
+		            <li><a href="lunches.html">Lunches</a></li>
+		            <li><a href="dinners.html">Dinners</a></li>
+		            <li><a href="snacks.html">Snacks</a></li>
+		            <li><a href="desserts.html">Desserts</a></li>
+		        </ul>
+		</nav>
 	</body>
 
 </html>
