--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<body>
 
-		<h1> Recipes Refined</h1>
+		<h1> <strong> Recipes Refined </strong></h1>
 		<h2> Your go to place for healthy, tailored recipes to fit your budget and macros!</h2>
 
 		<p> This website was created in order to help people of any dietary restrictions or dietary goals to find solace in cooking. Our goal at Recipes Refined is to help create meals based on needs and prices perfect for users like you! Here you will find recipes for higher protein, lower calorie meals with generic price points based on the average listed prices of products. We provide recipes for breakfasts, lunches, dinners, snacks, and even desserts! Further down our page you will find a requests page in order for us to design a recipe based on a meal you love! Enjoy!</p>
