--- a/breakfasts.html
+++ b/breakfasts.html
@@ -9,6 +9,7 @@
 <script src=""></script>
 <!--- Code above this line will not be displayed on the browser -->
 <body>
-<p> Breakfasts </p>
+<h1> <strong>Breakfasts</strong> </h1>
+  
 </body>
 </html>
