--- a/breakfasts.html
+++ b/breakfasts.html
@@ -10,6 +10,14 @@
 <!--- Code above this line will not be displayed on the browser -->
 <body>
 <h1> <strong>Breakfasts</strong> </h1>
-  
+  <style>
+    p {
+        color: #26568E;
+    }
+  </style>
+  <p> Here we have breakfasts. Click the link below to see a recipe!</p>
+
+  <a href="recipe1.html"> Recipe for Egg Bake</a>
+
 </body>
 </html>
