--- a/recipe1.html
+++ b/recipe1.html
@@ -5,10 +5,55 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="">
 <style>
+  .small-text {
+    font-size: 12px;
+    color: #91A4C2;
+  }
 </style>
 <script src=""></script>
 <!--- Code above this line will not be displayed on the browser -->
 <body>
-<p> Recipe1 </p>
+<h1> Egg Bake</h1>
+<h2> Recipe Ingredients</h2>
+  <dl>
+    <dt> Eggs</dt>
+    <dd> 6 eggs, beaten.</dd>
+
+    <dt> Cottage Cheese</dt>
+    <dd> Most brands work here, but I will specifically be using 8 oz low-fat cottage cheese.</dd>
+
+    <dt> Shredded Cheddar</dt>
+    <dd> 6 oz fat-free cheddar cheese. Using a normal kind of cheese will increase calories. </dd>
+
+    <dt> Turkey Sausage</dt>
+    <dd> 1/2 pound of cooked sausage, crumbled. You can find a tube of this at Target!</dd>
+
+    <dt> Bell Peppers</dt>
+    <dd> Choose 2 peppers of any colors you like, I am using orange and yellow. These will be chopped.</dd>
+
+    <dt> Onion</dt>
+    <dd> One medium yellow onion, chopped. </dd>
+
+    <dt> Low Calorie Spray</dt>
+    <dd> I am using Pam, but any off brand will work. Spray baking pan before use as well as for sauteing.</dd>
+
+    <dt> Spices</dt>
+    <dd> 1 tsp each of salt, pepper, onion powder, and garlic powder. </dd>
+  </dl>
+
+  <p> Begin by preheating your oven to 400 degrees. </p>
+    
+  <p> Beat the eggs with cottage cheese in a large bowl.</p>
+
+  <p> Next, saute your peppers and onions in the same pan you cooked your turkey sausage. Spray pan with cooking spray. Cook until onions are translucent and peppers are fragrant.</p>
+
+  <p> Mix in your sausage, shredded cheese, and cooked peppers and onions into your egg mixture. Add spices. </p>
+
+  <p> Spray baking pan with cooking spray. Pour mixture into pan. Cover with foil. </p>
+
+  <p> Let your egg bake cook, covered, for 45 minutes. For the last 15, remove foil. Once the egg bake is no longer jiggly, it is done. Enjoy!</p>
+
+  <p class="small-text"> Macros for 6 Servings: Calories - 250, Protein - 20g, Carbs - 10g, Fat - 15g.</p>
+  
 </body>
 </html>
