--- a/breakfasts.html
+++ b/breakfasts.html
@@ -5,17 +5,16 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="">
 <style>
+  #description {
+    color: #26568E;
+  }
 </style>
 <script src=""></script>
 <!--- Code above this line will not be displayed on the browser -->
 <body>
 <h1> <strong>Breakfasts</strong> </h1>
-  <style>
-    p {
-        color: #26568E;
-    }
-  </style>
-  <p> Here we have breakfasts. Click the link below to see a recipe!</p>
+  
+  <p id="description"> Here we have breakfasts. Click the link below to see a recipe!</p>
 
   <a href="recipe1.html"> Recipe for Egg Bake</a>
 
