--- a/breakfasts.html
+++ b/breakfasts.html
@@ -12,11 +12,20 @@
 <script src=""></script>
 <!--- Code above this line will not be displayed on the browser -->
 <body>
-<h1> <strong>Breakfasts</strong> </h1>
+  <nav>
+			<ul>
+		            <li><a href="breakfasts.html">Breakfasts</a></li>
+		            <li><a href="lunches.html">Lunches</a></li>
+		            <li><a href="dinners.html">Dinners</a></li>
+		            <li><a href="snacks.html">Snacks</a></li>
+		            <li><a href="desserts.html">Desserts</a></li>
+		        </ul>
+		</nav>
+  <h1> <strong>Breakfasts</strong> </h1>
+    
+    <p id="description"> Here we have breakfasts. Click the link below to see a recipe!</p>
   
-  <p id="description"> Here we have breakfasts. Click the link below to see a recipe!</p>
-
-  <a href="recipe1.html"> Recipe for Egg Bake</a>
+    <a href="recipe1.html"> Recipe for Egg Bake</a>
 
 </body>
 </html>
