--- a/breakfasts.html
+++ b/breakfasts.html
@@ -14,7 +14,7 @@
 <body>
   <nav>
 			<ul>
-		            <li><a href="breakfasts.html">Breakfasts</a></li>
+		            <li><a href="index.html">Home Page</a></li>
 		            <li><a href="lunches.html">Lunches</a></li>
 		            <li><a href="dinners.html">Dinners</a></li>
 		            <li><a href="snacks.html">Snacks</a></li>
