--- a/dinners.html
+++ b/dinners.html
@@ -9,6 +9,16 @@
 <script src=""></script>
 <!--- Code above this line will not be displayed on the browser -->
 <body>
-<p> Dinners </p>
+<nav>
+			<ul>
+		            <li><a href="breakfasts.html">Breakfasts</a></li>
+		            <li><a href="lunches.html">Lunches</a></li>
+		            <li><a href="index.html">Home Page</a></li>
+		            <li><a href="snacks.html">Snacks</a></li>
+		            <li><a href="desserts.html">Desserts</a></li>
+		        </ul>
+		</nav>
+  <h1> Dinners </h1>
+  <p> Here we will have recipes of macro friendly dinners. Insert a request on the home page for recipes you'd like to see!</p>
 </body>
 </html>
