--- a/snacks.html
+++ b/snacks.html
@@ -9,6 +9,17 @@
 <script src=""></script>
 <!--- Code above this line will not be displayed on the browser -->
 <body>
-<p> Snacks </p>
+<nav>
+			<ul>
+		            <li><a href="breakfasts.html">Breakfasts</a></li>
+		            <li><a href="lunches.html">Lunches</a></li>
+		            <li><a href="dinners.html">Dinners</a></li>
+		            <li><a href="index.html">Home Page</a></li>
+		            <li><a href="desserts.html">Desserts</a></li>
+		        </ul>
+		</nav>
+  <h1> Snacks </h1>
+  <img src="snacktray.jpg" alt="A delicious charcuterie board.">
+  <p> Here we will have recipes of macro friendly snacks. Insert a request on the home page for recipes you'd like to see!</p>
 </body>
 </html>
