--- a/desserts.html
+++ b/desserts.html
@@ -9,6 +9,17 @@
 <script src=""></script>
 <!--- Code above this line will not be displayed on the browser -->
 <body>
-<p> Desserts </p>
+<nav>
+			<ul>
+		            <li><a href="breakfasts.html">Breakfasts</a></li>
+		            <li><a href="lunches.html">Lunches</a></li>
+		            <li><a href="dinners.html">Dinners</a></li>
+		            <li><a href="snacks.html">Snacks</a></li>
+		            <li><a href="index.html">Home Page</a></li>
+		        </ul>
+		</nav>
+  <h1> Desserts </h1>
+  <img src="cheesecake.jpg" alt="Yummy strawberry cheesecake bars.">
+  <p> Here we will have recipes of macro friendly desserts. Insert a request on the home page for recipes you'd like to see!</p>
 </body>
 </html>
