--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title> Recipe Refined</title>
+<title> Recipes Refined</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="">
 <style>
@@ -21,6 +21,7 @@
 		<nav>
 			<ul>
 		            <li><a href="breakfasts.html">Breakfasts</a></li>
+			    <li><a href="recipe1.html">Egg Bake</a></li>
 		            <li><a href="lunches.html">Lunches</a></li>
 		            <li><a href="dinners.html">Dinners</a></li>
 		            <li><a href="snacks.html">Snacks</a></li>
