--- a/recipe1.html
+++ b/recipe1.html
@@ -16,6 +16,7 @@
   <nav>
 			<ul>
 		            <li><a href="index.html">Home Page</a></li>
+			    <li><a href="breakfasts.html">Return to Breakfasts</a></li>
 		            <li><a href="lunches.html">Lunches</a></li>
 		            <li><a href="dinners.html">Dinners</a></li>
 		            <li><a href="snacks.html">Snacks</a></li>
