--- a/dinners.html
+++ b/dinners.html
@@ -11,8 +11,9 @@
 <body>
 <nav>
 			<ul>
-		            <li><a href="breakfasts.html">Breakfasts</a></li>
-		            <li><a href="lunches.html">Lunches</a></li>
+		            <li><a href="breakfasts.html">Breakfasts</a></li>	
+			    <li><a href="recipe1.html">Egg Bake</a></li>
+			    <li><a href="lunches.html">Lunches</a></li>
 		            <li><a href="index.html">Home Page</a></li>
 		            <li><a href="snacks.html">Snacks</a></li>
 		            <li><a href="desserts.html">Desserts</a></li>
