--- a/snacks.html
+++ b/snacks.html
@@ -12,6 +12,7 @@
 <nav>
 			<ul>
 		            <li><a href="breakfasts.html">Breakfasts</a></li>
+			    <li><a href="recipe1.html">Egg Bake</a></li>
 		            <li><a href="lunches.html">Lunches</a></li>
 		            <li><a href="dinners.html">Dinners</a></li>
 		            <li><a href="index.html">Home Page</a></li>
