--- a/recipe1.html
+++ b/recipe1.html
@@ -24,6 +24,7 @@
 		        </ul>
 		</nav>
   <h1> Egg Bake</h1>
+	<img src="eggbake.jpg" alt="A picture of me making the egg bake at home.">
   <h2> Recipe Ingredients</h2>
     <dl>
       <dt> Eggs</dt>
