--- a/breakfasts.html
+++ b/breakfasts.html
@@ -4,11 +4,6 @@
 <title> Breakfasts</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="styles.css">
-<style>
-  #description {
-    color: #26568E;
-  }
-</style>
 <script src=""></script>
 <!--- Code above this line will not be displayed on the browser -->
 <body>
@@ -23,7 +18,7 @@
 		</nav>
   <h1> <strong>Breakfasts</strong> </h1>
     
-    <p id="description"> Here we have breakfasts. Click the link below to see a recipe!</p>
+    <p class="breakfast-description"> Here we have breakfasts. Click the link below to see a recipe!</p>
   
     <a href="recipe1.html"> Recipe for Egg Bake</a>
 
