--- a/recipe1.html
+++ b/recipe1.html
@@ -4,12 +4,6 @@
 <title> Egg Bake</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="styles.css">
-<style>
-  .small-text {
-    font-size: 12px;
-    color: #91A4C2;
-  }
-</style>
 <script src=""></script>
 <!--- Code above this line will not be displayed on the browser -->
 <body>
@@ -64,7 +58,7 @@
   
     <p> Let your egg bake cook, covered, for 45 minutes. For the last 15, remove foil. Once the egg bake is no longer jiggly, it is done. Enjoy!</p>
   
-    <p class="small-text"> Macros for 6 Servings: Calories - 250, Protein - 20g, Carbs - 10g, Fat - 15g.</p>
+    <p class="macros-text"> Macros for 6 Servings: Calories - 250, Protein - 20g, Carbs - 10g, Fat - 15g.</p>
   
     <h3> Estimated price = $13.50</h3>
     
