--- a/recipe1.html
+++ b/recipe1.html
@@ -58,7 +58,7 @@
   
     <p> Let your egg bake cook, covered, for 45 minutes. For the last 15, remove foil. Once the egg bake is no longer jiggly, it is done. Enjoy!</p>
   
-    <p class="macros-text"> Macros for 6 Servings: Calories - 250, Protein - 20g, Carbs - 10g, Fat - 15g.</p>
+    <p class="macros-text"> <i>Macros for 6 Servings: Calories - 250, Protein - 20g, Carbs - 10g, Fat - 15g. </i></p>
   
     <h3> Estimated price = $13.50</h3>
     
